--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,22 @@
 {
   "name": "rafaelmorenojs/shoppingCart",
   "description": "Carrito de Compras",
-  "minimum-stability": "stable",
+  "keywords": ["plugin", "shopping", "cart"],
   "license": "proprietary",
+  "type": "composer-plugin",
+  "require": {
+    "php": ">=5.6.0"
+  },
   "authors": [
     {
       "name": "Rafael Moreno",
       "email": "alejandro8924@gmail.com"
     }
-  ]
+  ],
+  "minimum-stability": "stable",
+  "config": {
+    "preferred-install": "dist",
+    "sort-packages": true,
+    "optimize-autoloader": true
+  }
 }
