--- a/composer.json
+++ b/composer.json
@@ -14,5 +14,9 @@
         "preferred-install": "dist",
         "sort-packages": true,
         "optimize-autoloader": true
+    },
+    "dist": {
+        "url": "https://github.com/rafaelmorenojs/shoppingCart/archive/1.0.0.zip",
+        "type": "zip"
     }
 }
