--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
     "optimize-autoloader": true
   },
   "dist": {
-    "url": "https://github.com/rafaelmorenojs/shoppingCart/archive/1.0.0.zip",
+    "url": "https://github.com/rafaelmorenojs/shoppingCart/archive/master.zip",
     "type": "zip"
   }
 }
